[gd_scene load_steps=3 format=2]

[ext_resource path="res://entities/enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/enemies/WalkingEnemy.gd" type="Script" id=3]

[node name="WalkingEnemy" instance=ExtResource( 1 )]
script = ExtResource( 3 )
LEFT_BOUND = 3
RIGHT_BOUND = 5

[node name="EnemyStats" parent="." index="3"]
max_health = 3

[node name="WallLeft" type="RayCast2D" parent="." index="4"]
enabled = true
cast_to = Vector2( -6, 0 )

[node name="WallRight" type="RayCast2D" parent="." index="5"]
enabled = true
cast_to = Vector2( 6, 0 )

[node name="FloorLeft" type="RayCast2D" parent="." index="6"]
position = Vector2( -4, 0 )
enabled = true
cast_to = Vector2( 0, 6 )

[node name="FloorRight" type="RayCast2D" parent="." index="7"]
position = Vector2( 4, 0 )
enabled = true
cast_to = Vector2( 0, 6 )

[node name="PatrolTimer" type="Timer" parent="." index="8"]
one_shot = true

[editable path="Hurtbox"]
